# mimia-quant

./: .env.example  .gitignore  AUDIT_REPORT.md  Makefile  README.md  _feature_check.py  main.py  pyproject.toml  requirements.txt  run_cron.py
.github/workflows/: ci.yml  daily-report.yml  deploy.yml
config/: config.yaml  strategies.yaml
data/oos_test/: results_summary.json
data/retrain_logs/: _batch_results.json
reports/: paper_trade_performance_2025-04-25.md
scripts/: _guardian_check3.py  _guardian_checks.py  analyze_probas.py  backtest.py  backtest_1week_perbar.py  backtest_clean.py  backtest_compare_enhanced.py  backtest_scalping.py  combo_experiment.py  compare_backtest_live.py  compare_backtest_live_v2.py  compare_backtest_live_v3.py  compare_bt_vs_live.py  compare_bt_vs_live_6h.py  compare_bt_vs_live_fair.py  compare_exact_range.py  compare_exit_strategies.py  compare_live_vs_backtest.py  compare_pnl_metrics.py  diagnose_backtest_vs_live.py  diagnose_feature_match.py  diagnose_feature_mismatch.py  diagnose_model_input.py  diagnose_model_loading.py  fund_oi_experiment.py  fund_oi_refined.py  init_db.py  live_trader.py  live_trader_daemon.sh  ml_backtest_integration.py  ml_ensemble_backtest.py  ml_signal_backtest.py  ml_voting_backtest.py  multi_tf_batch.py  multi_tf_experiment.py  oos_validation.py  oos_validation_v2.py  paper_trader.py  prepare_ml_data.py  replay_signal.py  (+33 more)
scripts/backtesting/: ml_ensemble_backtest.py  run_full_backtest.py  threshold_scan.py
src/: __init__.py
src/backtesting/: oos.py  (+6 more)
tests/: test_database.py  test_redis_client.py
(+83 files in other folders)
